--- a/src/app/pages/aboutus-page/aboutus-page.component.html
+++ b/src/app/pages/aboutus-page/aboutus-page.component.html
@@ -1,3 +1,19 @@
-<p>
-  aboutus-page works!
-</p>
+<section class="container">
+  <div class="cover-img" style="background-image: url('../assets/placeholders/aboutus.jpg')">
+  </div>
+  
+      <h3>ESTABLISHMENT</h3>
+      <p>Established in 1900, We have continually searched for the best areas in Egypt to build and provide real estate of high quality and standards.The company aims to provide affordable residential and commercial units in congruence with governmental current goals for residential projects.</p>
+  
+      <mat-divider  [inset]="true" ></mat-divider>
+  
+      <h3>VISION & MISSION</h3>
+      <p>The vision of Bytak is to achieve the highest possible standards of the real estate industry while establishing our agency as the preferred real estate company within our market area.</p>                
+  
+      <mat-divider  [inset]="true" ></mat-divider>
+  
+      <h3>ACHEIVEMENT</h3>
+      <p>Built more that 2.0 million residential units with high quallity in desgin. It will provide a unique unparalleled lifestyle through its world class residential ( Apartment - Duplex - Villa).</p>
+</section>
+
+
