--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
-<router-outlet class="page-content"></router-outlet>
+<app-navbar><router-outlet ></router-outlet></app-navbar>
+
+
 
 
