Added the material side-nav with dummy data

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -54,3 +54,10 @@
 #top-nav-back{
     display: none;
 }
+.sidenav-container{
+    margin-top: 56px;
+}
+mat-sidenav{
+    position: fixed;
+    margin-top: 56px;
+}
