--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav id="nav-bar" role="navigation">
-  <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url == '/dashboard'" (click)="toggleDrawer()"><i class="material-icons">menu</i></a>
+  <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url == '/dashboard'" (click)="snav.toggle()"><i class="material-icons">menu</i></a>
   <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url != '/dashboard'" (click)="goBack()" routerlink=".."><i class="material-icons">keyboard_backspace</i></a>
   <a class="nav-bar__title">{{title}}</a>
   <a class="navFav nav-bar__item--grey " href="#favs" role="button"><i class="material-icons">favorite</i></a>
@@ -7,3 +7,15 @@
   <a class="nav-bar__item--grey deskItems" role="link" routerLink="/register">SIGN UP</a>
   <a class="nav-bar__item--grey deskItems" role="link" (click)="openLoginModal()">LOGIN</a>
 </nav>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #snav mode="over" fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <ng-content></ng-content>
+      <p *ngFor="let content of fillerContent">{{content}}</p>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
