--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav id="nav-bar" role="navigation">
-  <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url == '/dashboard'" (click)="snav.toggle()"><i class="material-icons">menu</i></a>
+  <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url == '/dashboard'" (click)="snav.toggle()"><mat-icon [svgIcon]="snav.opened ? 'close' : 'menu'"></mat-icon></a>
   <a class="nav-bar__item nav-bar__item--grey"  tabindex="0" role="button" *ngIf="this.router.url != '/dashboard'" (click)="goBack()" routerlink=".."><i class="material-icons">keyboard_backspace</i></a>
   <a class="nav-bar__title">{{title}}</a>
-  <a class="navFav nav-bar__item--grey " href="#favs" role="button"><i class="material-icons">favorite</i></a>
-  <a class="navSearch nav-bar__item--grey " role="button" routerLink="/search"><i class="material-icons">search</i></a>
+  <a class="navFav nav-bar__item--grey " href="#favs" role="button"><mat-icon svgIcon="fav"></mat-icon></a>
+  
+  <a class="navSearch nav-bar__item--grey " role="button" routerLink="/search"><mat-icon svgIcon="search"></mat-icon></a>
   <a class="nav-bar__item--grey deskItems" role="link" routerLink="/register">SIGN UP</a>
   <a class="nav-bar__item--grey deskItems" role="link" (click)="openLoginModal()">LOGIN</a>
 </nav>
