refactor main container styling

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content>
+    <mat-sidenav-content class="page-content">
       <ng-content></ng-content>
       <p *ngFor="let content of fillerContent">{{content}}</p>
     </mat-sidenav-content>
