--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,8 @@
   <a class="navFav nav-bar__item--grey " href="#favs" role="button"><mat-icon svgIcon="fav"></mat-icon></a>
   
   <a class="navSearch nav-bar__item--grey " role="button" routerLink="/search"><mat-icon svgIcon="search"></mat-icon></a>
-  <a class="nav-bar__item--grey deskItems" role="link" routerLink="/register">SIGN UP</a>
-  <a class="nav-bar__item--grey deskItems" role="link" (click)="openLoginModal()">LOGIN</a>
+  <a class="nav-bar__item--grey deskop-Items" role="link" routerLink="/register">SIGN UP</a>
+  <a class="nav-bar__item--grey deskop-Items" role="link" (click)="openLoginModal()">LOGIN</a>
 </nav>
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #snav mode="over" fixedTopGap="56">
