--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
   <a class="nav-bar__item--grey deskop-Items" role="link" (click)="openLoginModal()">LOGIN</a>
 </nav>
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #snav mode="over" fixedTopGap="56">
+    <mat-sidenav #snav mode="over">
       <mat-nav-list>
         <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
       </mat-nav-list>
