--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,20 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #snav mode="over">
       <mat-nav-list>
-        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item routerLink="./profile">My profile</a>
+        <a mat-list-item routerLink="./chat">Messages</a>
+        <a mat-list-item routerLink="./posts">My posts</a>
+        <a mat-list-item routerLink="./favs">Favorites</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item routerLink="./news-aritcles">News & Articles</a>
+        <a mat-list-item routerLink= "./advices">Advices</a>
+        <a mat-list-item routerLink="./houses">Properties List</a>
+        <a mat-list-item routerLink="./tours">Tour schedule</a>
+        <a mat-list-item routerLink="./rents">Rent Schedule</a>
+        <a mat-list-item routerLink="./aboutus">AboutUs</a>
+        <a mat-list-item routerLink="./logout">Logout</a>
+
       </mat-nav-list>
     </mat-sidenav>
 
