--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ a{
     margin-left: 5vw;
     margin-right: 5vw;
     transition: all 1s ease;
+    min-height: calc(100vh - 122px) ;
 }
 
 .cover-img{
