--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <mat-nav-list>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="./profile">My profile</a>
-        <a mat-list-item routerLink="./chat">Messages</a>
+        <a mat-list-item routerLink="./chat" ><div  matBadge="22" matBadgePosition="above after">Messages</div></a>
         <a mat-list-item routerLink="./posts">My posts</a>
         <a mat-list-item routerLink="./favs">Favorites</a>
         <mat-divider></mat-divider>
@@ -30,6 +30,15 @@
 
     <mat-sidenav-content class="page-content">
       <ng-content></ng-content>
-      <p *ngFor="let content of fillerContent">{{content}}</p>
+      
     </mat-sidenav-content>
   </mat-sidenav-container>
+
+  <nav id="bottomNavBar" role="navigation">
+      <a href="#home" class="home bottomNavElm active"><i class="material-icons">home</i></a>
+      <a href="" class="bottomNavElm"><i class="material-icons">date_range</i></a>
+      <a href="#houselist" class="assetListing bottomNavElm bottomNavElmCenter centerElm"><i class="material-icons">list_alt</i></a>
+      <a href="" class="bottomNavElm"><i class="material-icons">360</i></a>
+      <a href="" class="bottomNavElm"><i class="material-icons">question_answer</i></a>
+  </nav>
+  
