Adding styling and tags to dashboard

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<p>
-  dashboard works!
-</p>
-<a routerLink="/advices">advices</a>
-<a routerLink="/aboutus">aboutus</a>
+<h3>Explore Cities</h3>
+<h3>Latest News</h3>
+<h3>Featured Properties</h3>
+<h3>Find your home</h3>
